
The ChangeLog for unknownR is the SVN commit log itself :
    $ svn log svn://svn.r-forge.r-project.org/svnroot/unknownR

This NEWS file summarises the main changes.

        *****************************************
        **                                     **
        **   CHANGES IN UNKNOWNR VERSION 0.2   **
        **                                     **
        *****************************************
        
NEW FEATURES

    o   unk gains delay and redDelay arguments: the number of
        seconds each function is displayed (3) and then turned
        red (2).
        
    o   unk gains pkgs argument, by default c("base","utils").
        Any set of packages can be passed here, as suggested
        by Jean-Robert Avettand-Fenoel (FR#1320). Accordingly,
        ~/.knowns.Rdata now saves the package of each function
        for cases where the same function name is in several
        packages.
        
    o   The .Rd manual page is retrieved and functions from
        internal pages (such as ns-internal and base-internal)
        are filtered, reducing 878 to 809 (using R 2.12.1).
        
        


        ********************************************
        **                                        **
        **   VERSION 0.1 RELEASED CRAN MAR 2011   **
        **                                        **
        ********************************************

